# space_inviders

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  collision_manager.cpp  collision_manager.hpp  config.lua  constants.hpp  entity.cpp  entity.hpp  game_manager.cpp  game_manager.hpp  global_config.lua  main.cpp  make_map.py  player.cpp  player.hpp  run_game.bat  shooter.cpp  shooter.hpp
entities/: basic_enemy.cpp  basic_enemy.hpp  bullet.cpp  bullet.hpp  damageable.cpp  damageable.hpp  enemy.cpp  enemy.hpp  entity.cpp  entity.hpp  player.cpp  player.hpp  shooter.cpp  shooter.hpp  shooter_enemy.cpp  shooter_enemy.hpp
game_states/: change_level_state.cpp  change_level_state.hpp  game_over_state.cpp  game_over_state.hpp  game_state.hpp  level_state.cpp  level_state.hpp  menu_state.cpp  menu_state.hpp
levels/: level_1.lua  level_1.txt  level_2.txt
managers/: animator.cpp  animator.hpp  audio_manager.cpp  collision_manager.cpp  collision_manager.hpp  game_manager.cpp  game_manager.hpp  input_manager.cpp  input_manager.hpp  level_manager.cpp  level_manager.hpp  renderer.cpp  renderer.hpp  signal_manager.hpp
